--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandsthumb.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_bestandsthumb.ini
@@ -8,3 +8,6 @@ COM_BIXPRINTSHOP_PLUGIN_BESTTHUMB_THUMBWIDTH="Breedte"
 COM_BIXPRINTSHOP_PLUGIN_BESTTHUMB_THUMBHEIGHT="Hoogte"
 ;COM_BIXPRINTSHOP_PLUGIN_BESTTHUMB_DETAILSMAXSIZE="Maximale grootte"
 ;COM_BIXPRINTSHOP_PLUGIN_BESTTHUMB_DETAILSMAXSIZ_DESC="Maximale grootte die een bestand mag hebben voor een uitgebreide thumb-check"
+COM_BIXPRINTSHOP_PLUGIN_BESTTHUMB_RESOLUTION="Resolutie"
+BIX_LOW="Laag"
+BIX_HIGH="Hoog"
