--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
@@ -32,11 +32,14 @@ PREFLIGHT4CLOUD_ERROR_INSUFFICIENT_CREDITS="Onvoldoende credits in account"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_FILE_CHECKED="Bestand gecontroleerd"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_FILE_OK="Het bestand is goedgekeurd"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_AANTALPAGS="Aantal pagina's"
-COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_AANTALFONTS="Aantal lettertypes"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_AANTALFONTS="Lettertypes"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_AANTALIMAGES="Aantal afbeeldingen"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_FILESIZE="Bestandsgrootte"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_HASBLEED="Bleed aanwezig"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLORUSE="Kleurgebruik"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_EMBEDDED="Embedded"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_SUBSETTED="Subsetted"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_TYPE="Type"
 
 BIX_MM_SPR="%d mm"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_PAG_X_SPR="Pagina %s"
@@ -53,5 +56,9 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_PAGE_CROPWIDTH="Pagina breedte"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_PAGE_CROPHEIGHT="Pagina hoogte"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_PAGE_MEDIAWIDTH="Bleedbox breedte"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_PAGE_MEDIAHEIGHT="Bleedbox hoogte"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_TECHNISCHE_TEKENING="Technische tekening"
 
-
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_GRAY="Grijs"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_CMYK="CMYK"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_RGB="RGB"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_LAB="Lab"
