--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
@@ -73,6 +73,7 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_SELECT_FILE="Selecteer eerst een bestand"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_STAP_SPR="Stap %d"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VORIGE="Vorige stap"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VOLGENDE="Volgende stap"
+COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_ANDER_BESTAND="Ander bestand"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UW_PRODUCT="Uw product"
 
 
