--- a/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
+++ b/administrator/language/nl-NL/nl-NL.plg_bixprintshop_order_preflight4cloud.ini
@@ -64,7 +64,7 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_RGB="RGB"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_COLOR_LAB="Lab"
 
 
-;show uloads
+;show uploads
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UPLOAD_MORE="Meer bestanden uploaden"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_WIZARD="Naar de wizard"
 
@@ -76,4 +76,4 @@ COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_VOLGENDE="Volgende stap"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_ANDER_BESTAND="Ander bestand"
 COM_BIXPRINTSHOP_PREFLIGHT4CLOUD_UW_PRODUCT="Uw product"
 
-
+COM_BIXPRINTSHOP_PLUGIN_PREFLIGHT4CLOUD_THUMB="Preview"
